--- a/build.gradle
+++ b/build.gradle
@@ -66,3 +66,8 @@ jar {
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
 }
+repositories {
+    maven {
+        url "https://kotlin.bintray.com/kotlinx"
+    }
+}
